objects/Digital_Resource__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Digital_Support_Request__r.Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignee_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assignee Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignee_First_Name__c</fullName>
        <formula>Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assignee First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignee_Last_Name__c</fullName>
        <formula>Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assignee Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignee_Phone__c</fullName>
        <formula>Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assignee Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Digital_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Digital_Support_Request__c</fullName>
        <label>Digital Support Request</label>
        <referenceTo>Digital_Support_Request__c</referenceTo>
        <relationshipName>Digital_Resources</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <formula>Digital_Support_Request__r.Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Resource_First_Name__c &amp;&quot; &quot;&amp; Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <formula>Digital_Support_Request__r.Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <formula>Digital_Support_Request__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Email__c</fullName>
        <formula>Requester__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_First_Name__c</fullName>
        <formula>Requester__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Last_Name__c</fullName>
        <formula>Requester__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Phone__c</fullName>
        <formula>Requester__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Digital_Resources_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource_First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Digital Resource Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DRN# {00000000}</displayFormat>
        <label>Digital Resource</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Digital Resource Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>